--- a/app/src/main/res/layout/fragment_confirm_password.xml
+++ b/app/src/main/res/layout/fragment_confirm_password.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="@dimen/edit_textSize"
+            android:imeOptions="actionNext"
             android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
@@ -62,6 +63,7 @@
             android:textSize="@dimen/edit_textSize"
             android:text=""
             android:textColor="#FFFFFF"
+            android:imeOptions="actionDone"
             android:fontFamily="@font/avenir_book"
             tools:ignore="HardcodedText,MissingConstraints"
             android:ems="10"
