--- a/app/src/main/res/layout/fragment_confirm_password.xml
+++ b/app/src/main/res/layout/fragment_confirm_password.xml
@@ -5,18 +5,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <LinearLayout
-        android:id="@+id/linear_layout"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/txtGuideline"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/content_margin"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -27,7 +21,11 @@
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:layout_marginTop="80dp" />
+            android:layout_marginTop="80dp"
+            android:layout_marginHorizontal="@dimen/content_margin"
+            app:layout_constraintTop_toBottomOf="@id/txtGuideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <EditText
             android:id="@+id/password_entry3"
@@ -39,10 +37,14 @@
             android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
+            android:layout_marginHorizontal="@dimen/content_margin"
             tools:ignore="HardcodedText,MissingConstraints"
             android:ems="10"
             app:backgroundTint="@color/textGrey"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            app:layout_constraintTop_toBottomOf="@id/Password3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -53,7 +55,11 @@
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:layout_marginTop="@dimen/standardMargin" />
+            android:layout_marginTop="@dimen/standardMargin"
+            app:layout_constraintTop_toBottomOf="@id/password_entry3"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginHorizontal="@dimen/content_margin"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <EditText
             android:id="@+id/confirm_password_entry2"
@@ -68,7 +74,11 @@
             tools:ignore="HardcodedText,MissingConstraints"
             android:ems="10"
             app:backgroundTint="@color/textGrey"
-            android:inputType="textPassword" />
+            android:layout_marginHorizontal="@dimen/content_margin"
+            android:inputType="textPassword"
+            app:layout_constraintTop_toBottomOf="@id/confirm_Password2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -84,8 +94,11 @@
             android:layout_marginTop="80dp"
             tools:ignore="MissingConstraints"
             app:cornerRadius="@dimen/content_margin"
-            android:background="@drawable/button_border"/>
-    </LinearLayout>
+            android:layout_marginHorizontal="@dimen/content_margin"
+            android:background="@drawable/button_border"
+            app:layout_constraintTop_toBottomOf="@id/confirm_password_entry2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
